<resources>
    <string name="app_name">Калькулятор</string>
    <string name="number1_name">Операнд №1</string>
    <string name="number2_name">Операнд №2</string>
    <string name="number_result_name">Результат</string>
    <string name="button_about">О программе</string>
    <string name="textview_about_message">Автор вставил картинку svg</string>
    <string name="button_addition_name" translatable="false">+</string>
    <string name="button_subtraction_name" translatable="false">−</string>
    <string name="button_division_name" translatable="false">÷</string>
    <string name="button_multiplication_name" translatable="false">×</string>
    <string name="button_equals_name" translatable="false">=</string>
</resources>